--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Andrej Karpathy blog
+title: Amaraa blog
 email: 
 description: "Musings of a Computer Scientist."
 baseurl: ""
-url: "http://karpathy.github.io"
-twitter_username: karpathy
-github_username:  karpathy
+url: "http://asaamaraa.github.io"
+twitter_username: asaamaraa
+github_username:  asaamraa
 
 # Build settings
 markdown: kramdown
