--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Amaraa blog
 email: 
-description: "Musings of a Computer Scientist."
+description: "everything about the universe"
 baseurl: ""
 url: "http://asaamaraa.github.io"
 twitter_username: asaamaraa
